[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/newexitbutonFUCKYOUASEPRITE.png" type="Texture" id=1]
[ext_resource path="res://Gooblin.tres" type="DynamicFont" id=2]
[ext_resource path="res://counterUI.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/Credits.gd" type="Script" id=4]
[ext_resource path="res://sprites/newexitbutonFUCKYOUASEPRITE.se;lect.png" type="Texture" id=5]

[node name="Credits" type="Node2D"]
script = ExtResource( 4 )

[node name="selar" type="LinkButton" parent="."]
margin_right = 941.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 2 )
text = "selar - coder, spriter"
underline = 1

[node name="whiteout" type="LinkButton" parent="."]
margin_top = 54.0
margin_right = 941.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 2 )
text = "whiteout - spriter"
underline = 1

[node name="kriz" type="LinkButton" parent="."]
margin_top = 113.0
margin_right = 941.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 2 )
text = "kriz - menu theme"
underline = 1

[node name="visoe" type="LinkButton" parent="."]
visible = false
margin_top = 174.0
margin_right = 941.0
margin_bottom = 226.0
custom_fonts/font = ExtResource( 2 )
text = "visoe - top hat sprite"
underline = 1

[node name="version" type="LinkButton" parent="."]
margin_left = 8.0
margin_top = 547.0
margin_right = 949.0
margin_bottom = 599.0
focus_mode = 2
custom_fonts/font = ExtResource( 3 )
text = "v1.2.0"
underline = 2

[node name="exit" type="TextureButton" parent="."]
margin_left = 918.0
margin_top = 494.0
margin_right = 1018.0
margin_bottom = 594.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 5 )
expand = true

[connection signal="button_down" from="selar" to="." method="_on_selar_button_down"]
[connection signal="button_up" from="whiteout" to="." method="_on_whiteout_button_up"]
[connection signal="button_up" from="kriz" to="." method="_on_kriz_button_up"]
[connection signal="button_up" from="visoe" to="." method="_on_visoe_button_up"]
[connection signal="button_up" from="version" to="." method="_on_version_button_up"]
[connection signal="button_up" from="exit" to="." method="_on_exit_button_up"]
